--- a/css/style.css
+++ b/css/style.css
@@ -7,18 +7,20 @@ body {
     font-family: 'Open Sans';
 
 }
-.teste-fim{
+
+.footer {
     grid-row-start: 25;
-   
+
     grid-column-start: 1;
-    grid-column-end: 13;
-    background-color: aqua;
-    height:300px;
+
+   
+    height: 300px;
 
 }
+
 .central {
     display: flex;
-    background-color: coral;
+   
     align-items: center;
     justify-content: center;
 }
@@ -75,6 +77,16 @@ body {
 .alerta-situacao-pronto {
     color: white;
     background-color: green;
+    text-align: center;
+}
+
+.txt-br-center {
+    color: white;
+    text-align: center;
+}
+
+.txt-az-center {
+    color: #060029;
     text-align: center;
 }
 
@@ -290,11 +302,85 @@ body {
         grid-column-start: 1;
         grid-column-end: 13;
         margin-top: 20px;
+        color: white;
     }
 
+    /*SISTEMAS PAGINA*/
+
+    .div-viewport-sistema {
+        grid-row-start: 11;
+        grid-column-start: 1;
+        grid-column-end: 13;
+
+    }
+
+    .subSistema1 {
+        grid-row-start: 12;
+        grid-column-start: 1;
+        grid-column-end: 4;
+        background-color: #6c44ff;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    .subSistema2 {
+        grid-row-start: 12;
+        grid-column-start: 4;
+        grid-column-end: 7;
+        background-color: #ff4343;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    .subSistema3 {
+        grid-row-start: 12;
+        grid-column-start: 7;
+        grid-column-end: 10;
+        background-color: #12b648;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    .subSistema4 {
+        grid-row-start: 12;
+        grid-column-start: 10;
+        grid-column-end: 13;
+        background-color: #414141;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    /*TECNOLOGIAS*/
+    .div-viewport-tecnologia {
+        grid-row-start: 13;
+        grid-column-start: 1;
+        grid-column-end: 13;
+
+    }
+
+    .tecnologias-div {
+        background-color: white;
+        grid-row-start: 14;
+        grid-column-start: 2;
+        grid-column-end: 12;
+
+        padding: 15px;
+        margin: 10px;
+        border-radius: 15px;
 
 
+    }
 
+    .logo-geral-tecnologia {
+        height: 100px;
+        padding: 2px;
+        margin: 10px;
+
+    }
 
 
 
@@ -414,6 +500,8 @@ body {
         border-radius: 300px;
     }
 
+    /*SOBRE*/
+
     .sobre {
         grid-row-start: 4;
         grid-column-start: 2;
@@ -442,6 +530,162 @@ body {
         padding-right: 40px;
         font-size: 18pt;
     }
+
+    /*SISTEMAS DESENVOLVIDOS*/
+    .div-viewport-projetos {
+        grid-row-start: 6;
+        grid-column-start: 1;
+        grid-column-end: 9;
+
+    }
+
+    .sistema1 {
+        grid-row-start: 7;
+        grid-column-start: 2;
+        grid-column-end: 8;
+
+        background-color: white;
+        margin-left: 20px;
+        margin-right: 20px;
+        border: 2px solid #060029;
+        border-radius: 15px;
+        padding: 0 5% 5% 5%;
+        color: #060029;
+        margin-bottom: 40px;
+    }
+
+    .sistema2 {
+        grid-row-start: 8;
+        grid-column-start: 2;
+        grid-column-end: 8;
+
+        background-color: #060029;
+        margin-left: 20px;
+        margin-right: 20px;
+        border: 2px solid white;
+        border-radius: 15px;
+        padding: 0 5% 5% 5%;
+        color: white;
+        margin-bottom: 40px;
+    }
+
+    .sistema3 {
+        grid-row-start: 9;
+        grid-column-start: 2;
+        grid-column-end: 8;
+        background-color: white;
+        margin-left: 20px;
+        margin-right: 20px;
+        border: 2px solid #060029;
+        border-radius: 15px;
+        padding: 0 5% 5% 5%;
+        color: #060029;
+        margin-bottom: 40px;
+    }
+
+    .alerta-span {
+        background-color: red;
+        text-transform: uppercase;
+        font-size: 10pt;
+        grid-row-start: 10;
+        grid-column-start: 1;
+        grid-column-end: 9;
+        margin-top: 20px;
+        color: white;
+    }
+
+    .logo-tecnologia {
+        height: 50px;
+        padding: 2px;
+    }
+
+    .div-logo-tecnologia {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 5%;
+    }
+
+    /*SISTEMAS PAGINA*/
+
+    .div-viewport-sistema {
+        grid-row-start: 11;
+        grid-column-start: 1;
+        grid-column-end: 9;
+
+    }
+
+    .subSistema1 {
+        grid-row-start: 12;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        background-color: #6c44ff;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    .subSistema2 {
+        grid-row-start: 12;
+        grid-column-start: 3;
+        grid-column-end: 5;
+        background-color: #ff4343;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    .subSistema3 {
+        grid-row-start: 12;
+        grid-column-start: 5;
+        grid-column-end: 7;
+        background-color: #12b648;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    .subSistema4 {
+        grid-row-start: 12;
+        grid-column-start: 7;
+        grid-column-end: 9;
+        background-color: #414141;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    /*TECNOLOGIAS*/
+    .div-viewport-tecnologia {
+        grid-row-start: 13;
+        grid-column-start: 1;
+        grid-column-end: 9;
+
+    }
+
+    .tecnologias-div {
+        background-color: white;
+        grid-row-start: 14;
+        grid-column-start: 2;
+        grid-column-end: 8;
+
+        padding: 15px;
+        margin: 10px;
+        border-radius: 15px;
+
+
+    }
+
+    .logo-geral-tecnologia {
+        height: 100px;
+        padding: 2px;
+        margin: 10px;
+
+    }
+
+
+
+
 
 
 
@@ -559,6 +803,7 @@ body {
         border-radius: 300px;
     }
 
+    /*SOBRE*/
     .sobre {
         grid-row-start: 4;
         grid-column-start: 1;
@@ -598,7 +843,157 @@ body {
         font-size: 18pt;
     }
 
+    /*SISTEMAS DESENVOLVIDOS*/
+    .div-viewport-projetos {
+        grid-row-start: 6;
+        grid-column-start: 1;
+        grid-column-end: 4;
 
+    }
+
+    .sistema1 {
+        grid-row-start: 7;
+        grid-column-start: 1;
+        grid-column-end: 5;
+
+        background-color: white;
+        margin-left: 20px;
+        margin-right: 20px;
+        border: 2px solid #060029;
+        border-radius: 15px;
+        padding: 0 5% 5% 5%;
+        color: #060029;
+        margin-bottom: 40px;
+    }
+
+    .sistema2 {
+        grid-row-start: 8;
+        grid-column-start: 1;
+        grid-column-end: 5;
+
+        background-color: #060029;
+        margin-left: 20px;
+        margin-right: 20px;
+        border: 2px solid white;
+        border-radius: 15px;
+        padding: 0 5% 5% 5%;
+        color: white;
+        margin-bottom: 40px;
+    }
+
+    .sistema3 {
+        grid-row-start: 9;
+        grid-column-start: 1;
+        grid-column-end: 5;
+        background-color: white;
+        margin-left: 20px;
+        margin-right: 20px;
+        border: 2px solid #060029;
+        border-radius: 15px;
+        padding: 0 5% 5% 5%;
+        color: #060029;
+        margin-bottom: 40px;
+    }
+
+    .alerta-span {
+        background-color: red;
+        text-transform: uppercase;
+        font-size: 10pt;
+        grid-row-start: 10;
+        grid-column-start: 1;
+        grid-column-end: 5;
+        margin-top: 20px;
+        color: white;
+    }
+
+    .logo-tecnologia {
+        height: 50px;
+        padding: 2px;
+    }
+
+    .div-logo-tecnologia {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 5%;
+    }
+
+    /*SISTEMAS PAGINA*/
+
+    .div-viewport-sistema {
+        grid-row-start: 11;
+        grid-column-start: 1;
+        grid-column-end: 5;
+
+    }
+
+    .subSistema1 {
+        grid-row-start: 12;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        background-color: #6c44ff;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    .subSistema2 {
+        grid-row-start: 12;
+        grid-column-start: 3;
+        grid-column-end: 5;
+        background-color: #ff4343;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    .subSistema3 {
+        grid-row-start: 13;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        background-color: #12b648;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    .subSistema4 {
+        grid-row-start: 13;
+        grid-column-start: 3;
+        grid-column-end: 5;
+        background-color: #414141;
+        padding: 0 0 10px 15px;
+        margin: 10px;
+        border-radius: 15px;
+    }
+
+    /*TECNOLOGIAS*/
+    .div-viewport-tecnologia {
+        grid-row-start: 14;
+        grid-column-start: 1;
+        grid-column-end: 5;
+
+    }
+
+    .tecnologias-div {
+        background-color: white;
+        grid-row-start: 15;
+        grid-column-start: 1;
+        grid-column-end: 5;
+
+        padding: 15px;
+        margin: 10px;
+        border-radius: 15px;
+
+
+    }
+
+    .logo-geral-tecnologia {
+        height: 100px;
+        padding: 2px;
+        margin: 10px;
+
+    }
 
 
 
