--- a/css/style-global.css
+++ b/css/style-global.css
@@ -8,8 +8,25 @@ body {
     font-family: 'Open Sans';
 
 }
+.alertaInicial {
+    background-color: #FA5959;
+    padding: 20px;
+    width: 80%;
+    border-radius: 5px;
+    position: absolute;
+    top: 100px;
+    left: 10%;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    z-index: 10;
+    
+}
+
 .fundo-teste{
-    background-color: #587;
+    background-color: white;
     position: absolute;
     height: 1100px;
    width: 100%;
@@ -76,12 +93,12 @@ body {
 }
 
 .txt1 {
-    color: white;
+    color:#060029;
 }
 
 .link-semFormatacao {
     text-decoration: none;
-    color: white;
+    color: #060029;
 }
 
 .titulo-sistema-az {
